cabal-version:      3.14

-- Newer versions complain
name:               kasmveh
version:            0.2.0.0

-- synopsis:
description:        Playing with assemblery stuff 
homepage:           https://github.com/emberdart/kasmveh#readme
license:            AGPL-3.0-only

-- license-file:        LICENSE
author:             Ember Dart
maintainer:         cabal@emberdart.co.uk
copyright:          2019 Ember Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

common shared-properties-base
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  ghcjs-options:      -dedupe

common shared-properties-lib
  import:             shared-properties-base
  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

  build-depends:      base ^>=4.22
  default-extensions: UnicodeSyntax

common shared-properties-unsafe
  import:             shared-properties-base

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

  build-depends:      base ^>=4.22
  default-extensions: UnicodeSyntax

common shared-properties-safe
  import:             shared-properties-unsafe
  default-extensions:
    NoGeneralizedNewtypeDeriving
    Safe
    UnicodeSyntax

common shared-properties-nobase
  import:             shared-properties-base

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Werror -haddock

  default-extensions: UnicodeSyntax

-- TODO: unsafe?
library
  import:          shared-properties-lib

  --ghc-options: -Wno-unused-packages
  hs-source-dirs:  lib
  build-depends:
    , array                ^>=0.5.8
    , base                 ^>=4.22
    , mtl                  ^>=2.3.1
    , nonempty-containers  ^>=0.3.4.5

  -- , containers           ^>=0.8
  -- , vector ^>=0.13.2

  -- pretty-simple
  exposed-modules:
    Code
    Interpret
    Machine

executable kasmveh
  import:        shared-properties-unsafe
  main-is:       Main.hs
  build-depends:
    , base     ^>=4.22
    , kasmveh  ^>=0.2

-- executable example1
--   import:         shared-properties-unsafe
--   hs-source-dirs: examples
--   main-is:        Example1.hs
--   build-depends:
--     , base     ^>=4.22
--     , kasmveh
--     , pretty-simple-- 

-- executable fizzbuzz
--   import:         shared-properties-unsafe
--   hs-source-dirs: examples
--   main-module
--   main-is:        FizzBuzz.hs
--   build-depends:
--     , base     ^>=4.22
--     , kasmveh
--     , pretty-simple ^>=4.1.3

test-suite test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   GHC2024
  default-extensions:
    NoGeneralizedNewtypeDeriving
    UnicodeSyntax

  build-depends:
    , base        ^>=4.22
    , hspec       ^>=2.11.15
    , kasmveh     ^>=0.2
    , QuickCheck  ^>=2.18

  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
